--- a/farm/css/styl.css
+++ b/farm/css/styl.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+html{
+    font-size: 12px;
+}
 
 body{
     color:black;
@@ -30,8 +33,83 @@ header nav ul{
 }
 a{
     text-decoration:none;
-    color:#ff9955;
+    color:#0c2e50;
 }
 div{
     display:flex;
+    justify-content:space-between;
+    width:1240px;
+    margin:0 auto 50px;
+
+}
+main{
+    flex-basis:920px;
+    background-color: #e4c664;
+    border-radius: 16px;
+    padding:50px 40px 50px;
+    box-shadow: 10px 0px 10px 10px rgb(89, 26, 26);
+}
+aside {
+    flex-basis:284px;
+}
+aside nav{
+    flex-basis:920px;
+    background-color: #e4c664;
+    border-radius: 16px;
+    padding:50px 40px 50px;
+    box-shadow: 10px 0px 10px 10px rgb(89, 26, 26);
+    margin-bottom:26px;
+}
+aside nav h2{
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color:#664444;
+}
+aside nav ul{
+    font-size: 1.2rem;
+}
+.categoryNav ul li{
+    list-style-type: square;
+    color:#664444;
+    margin:0 0 16px 20px;
+}
+.recentNav ul li{
+    border-bottom: 1px solid #664444;
+    padding-bottom: 10px;
+    margin-bottom: 22px;
+}
+
+
+/*640px以下*/
+
+@media screen and (max-width:640px){
+html{
+    font-size: 13px;
+}
+header{
+    width:100%;
+}  
+h1{
+text-align: left;
+padding:20px 0 20px;
+}
+
+
+
+main{
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 30px;
+}    
+aside{
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 30px;
+}
+
+    div{
+        display: block;
+        width:100%;
+    }
 }
